# BookShop

./: pyproject.toml
BookShop/BookShop/: settings.py
